# fuel-introspection-library

./: Cargo.toml
appendooor/: Cargo.toml
appendooor/src/: main.rs
example_contract/: Forc.toml
example_contract/src/: main.sw
introspection_library/: Forc.toml
introspection_library/src/: lib.sw  utils.sw
introspectooor/: Cargo.toml  Forc.toml
introspectooor/src/: main.sw
introspectooor/tests/: harness.rs
