[package]
name = "appendooor"
version = "0.1.0"
edition = "2021"

[dependencies]
fuels = { workspace = true, features = ["fuel-core-lib"] }
fuel-abi-types = "0.2.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.3"
